--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hjs": "~0.0.6",
     "less-middleware": "0.1.15",
     "mongodb": "~1.3.23",
-    "mongoskin": "~1.3.20"
+    "mongoskin": "~1.3.20",
+    "node.extend": "~1.0.10"
   }
 }
