--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "mongodb": "~1.3.23",
     "mongoskin": "~1.3.20",
     "node.extend": "~1.0.10"
+  },
+  "subdomain": "few",
+  "engines": {
+    "node": "0.8.x"
   }
 }
