--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "application-name",
-  "version": "0.0.1-2",
+  "subdomain": "few",
+  "domains": [
+    "projectfew.org",
+    "www.projectfew.org"
+  ],
+  "version": "0.0.1-28",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -21,7 +26,6 @@
     "angular-momentjs": "~0.1.7",
     "angular-moment": "~0.6.2"
   },
-  "subdomain": "few",
   "engines": {
     "node": "0.8.x"
   }
